2003-09-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/SimpleBookTitle.py 
	(SimpleBookTitleDialog.add_user_options): Add a tab for an image, 
	provide more controls for managing it;
	(remove_obj): Add function. 
	(select_file): Add a placeholder function. 
	(select_obj): Gracefully handle Cancel empty object (cancel).
	Enable Remove button on non-empty selection. 

2003-09-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: handle the possibility of missing
	"inclusive" settings, assuming that it is 1 if not present.

2003-09-08  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Ship SelectObject.py.

2003-09-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (__init__): Pass parent window to DbPrompter.
	* src/DbPrompter.py (show): Gracefully deal with empty parent.

2003-09-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PdfDoc.py: handle multiple image classes defined
	by reportlab

2003-09-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (new_database_response,read_file,save_file): 
	Pass parent window to DbPrompter.
	* src/DbPrompter.py (__init__): Accept optional parent argument;
	(show): Make the window the transient for the main window. 
	* src/gramps.glade: Make Opendb dialog modal. 

2003-09-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: re-present the open dialog box on
	a failure to open a file.
	* src/gramps.glade: change Home button from stock version
	to something we can translate
	* src/const.py.in: Add "Alternate Marriage" as a family 
	event type.

2003-09-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectObject.py: Add module. 
	* src/choose.glade: Add select_object dialog. 
	* src/plugins/SimpleBookTitle.py: Add image options.

2003-09-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FilterEditor.py (MyInteger): Fix type conversions. 

2003-09-06  Don Allingham  <dallingham@users.sourceforge.net>